Update Versions.java on adding new versions

1.3.0
New feature: `GLFWindow` is `AutoCloseable` now
New feature: You can set resized to window
New feature: `iVertexBuilder` has rendering function

1.2.0
New feature: `IVertexBuilder`
New feature: `BaseMeshVertexBuilder`
New feature: `MeshVertexBuilder`
New feature: `Mesh3VertexBuilder`
New feature: `ObjLoader`
New feature: `ObjModel`
New feature: `ObjModel2`
New feature: `ObjModel3`
New feature: Lighting system
    +Direction
    +DirectionalLight
    +PointLight
    +Material

1.1.0
New feature: `Math`
New internal feature: `AtlasLoomArray`
New internal feature: `MeshManager`
New internal feature: `MeshManager3`
New internal feature: `MeshManagerConstant`
New feature: `FontTexture`
New feature: `FontTextures`
New feature: `Drawable`
New feature: `DrawableText`
New feature: `Mesh3#bindVao` and `Mesh3#unbindVao`
New feature: Mesh supported to normal vertex
Changed: Use common utils now
Changed: `ShaderReader` and `MeshLoader` use UTF-8 not ANSI now
Changed: Rename `Window` to `GLFWindow`

1.0.0
Release
New feature: More docs
New feature: `Versions`
New feature: `Window`
New feature: `Framebuffer`
Changed: Rename `MeshVar` to `MeshMacro`
Changed: Rename `idxVbo` to `ibo`
Changed: `ShaderType#toString`: "vertexShader" -> "vertex shader"
Changed: Mesh color is optional now

0.9.0
Beta
Fixed a bug: `GLUtils.VERSION` was 0.7.0
New feature: `ArrayHelper.toIArray`
New feature: `ArrayHelper.expand`
New feature: `GLUtils.isOlder`
New feature: `GLUtils.isNewer`
New feature: `GLUtils.isEqual`
Changed: Move `*Mesh*` to [base pkg].mesh

0.8.0
Fixed a bug: `AtlasLoomSTB` was flipping
Fixed a bug: Can't compile `AtlasLoomSTB`
Changed: Public dependencies

0.7.0
New feature: ArrayHelper
New feature: CompileException
New feature: FloatArray
New feature: IntArray
New feature: MapStr2Str
New feature: MeshFile
New feature: MeshLoader
New feature: MeshVar

0.6.1
Fixed Javadoc
0.6.0
Alpha
Removed: Mesh builder
New feature: `BaseMesh`
