@@ -35,14 +35,18 @@ public class Mesh3VertexBuilder extends BaseMeshVertexBuilder {
     private void preRender() {
         if (isDirty) {
             mesh.bindVao().vertices(vertices.toFArray());
+            vertices.clear();
             if (colored) {
                 mesh.colors(colors.toFArray());
+                colors.clear();
             }
             if (textured) {
                 mesh.texCoords(textureCoord.toFArray());
+                textureCoord.clear();
             }
             if (normalized) {
                 mesh.normalVert(normals.toFArray());
+                normals.clear();
             }
             mesh.unbindVao();
             isDirty = false;
@@ -64,5 +68,10 @@ public class Mesh3VertexBuilder extends BaseMeshVertexBuilder {
     public void render(int mode) {
         preRender();
         mesh.render(mode);
+    }
+
+    @Override
+    public void close() {
+        mesh.close();
     }
 }
